<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Freshlist</string>
    <string name="title_activity_front_page">Freshlist</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="you_domaim_com">You@domaim.com</string>
    <string name="_phonenumber">0783838383</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="repeat_above_password">Repeat Password</string>
    <string name="delete_this_item">Delete this item</string>
    <string name="edit">Edit this Item</string>
    <string name="grocery_name">2.5 kilos of Short Rice</string>
    <string name="quantity">Quantity</string>
    <string name="done_and_continue">Done</string>
    <string name="compose_your_order_list">Compose Your Order List</string>

    <string-array name="grocelies">
        <item>Bananas</item>
        <item>Milk</item>
        <item>Inyange Milk</item>
        <item>Rice</item>
        <item>Chicken</item>
        <item>Frozen Chicken</item>
        <item>Nyabisindu Milk</item>
        <item>Green vegetable</item>
        <item>Carrotes</item>
        <item>Cabbages</item>
        <item>Apples</item>
        <item>Cucumber</item>
        <item>Eggs</item>
        <item>Orange Juice</item>
        <item>Lemon Juice</item>
        <item>Mango Juice</item>
        <item>Cake</item>
        <item>Ice cream </item>
        <item>Strowberry</item>
        <item>Mangoes</item>
        <item>Avocadoes</item>
        <item>Coffee</item>
        <item>White Sugar</item>
        <item>Brown Sugar</item>
        <item>Beef</item>
        <item>Meat</item>
        <item>Cheese</item>
        <item>Cotage Cheese</item>
        <item>Oranges</item>
        <item>Letuces</item>
        <item>Tomatoes</item>
        <item>Celery</item>
        <item>Mushrooms</item>
        <item>Yoghurt</item>
        <item>Soda</item>
        <item>Bread</item>
        <item></item>
    </string-array>
    <string-array name="grocerydetails">
        <item>Kilos</item>
        <item>Litters</item>
        <item>Packs</item>
        <item>Dozaines</item>
        <item>Kilo</item>
        <item>Litter</item>
        <item>Pack</item>
        <item>Dozaine</item>
        <item>Peace</item>
        <item>Peaces</item>
    </string-array>
    <string-array name="Shops">
        <item>Nyamirambo market</item>
        <item>Kacyiru market</item>
        <item>Simba super market</item>
        <item>Ndoli super market</item>
        <item>Nakumat market</item>
        <item>Kimironko market</item>
    </string-array>

    <string name="add_item">Add Item</string>
    <string name="add_to_list">Add to list</string>
    <string name="addit">+</string>
    <string name="from_which_shop_">"From Which Shop : "</string>
    <string name="shop_name">Shop Name</string>
    <string name="or_sign_up_as_new_user">Or sign Up As New User</string>
    <string name="_2_5">2.5</string>
    <string name="kilos">kilos</string>
    <string name="welcome_to_freshlist">Welcome to Freshlist</string>
    <string name="instructions1">Instructions : Please Choose a service you may need us to
        complete, Schedule it any time and make a lists of concerned activities or task we must accomplish </string>
    <string name="groceries_and_shoping">Groceries and Shoping \n we can shop for you anything from any shop you need</string>
    <string name="household_services">HouseHold and Home Services \n we can take care of any of your home activities you need</string>
    <string name="children_care_services">Children Care Services \n we can take care of you kids and tutor them if you want too</string>
    <string name="check_and_pay_bills">Check and Pay Bills \n we can spend time on water,electricity,gas bill paying lines for you</string>
    <string name="sendnow">Send</string>
    <string name="list_name">List Name</string>
    <string name="schedulehint">Tomorrow 8h30</string>
    <string name="scheduled_at_">"Scheduled at "</string>
    <string name="cancel">Cancel</string>
    <string name="describe_item">Describe an item to shop as example shows and add it</string>
    <string name="grocerychecktextresult">Groceries and Shopping your list \n</string>
    <string name="describe_an_activity_to_do">Describe an activity to do as example shows</string>
    <string name="activity_example">Clean All Dishes</string>

    <string-array name="householdservices">
        <item>Clean All Dishes</item>
        <item>Clean The House</item>
        <item>Cook Dinner</item>
        <item>Cook Supper</item>
        <item>Cook</item>
        <item>Arrange in Living rooms</item>
        <item>Arrange in Dinning rooms</item>
        <item>Wash</item>
        <item>Wash Clothes</item>
        <item>Wash Dishes</item>
        <item>Dishes</item>
        <item>Garden Care</item>
    </string-array>
        <string name="address">Address</string>
        <string name="address_comments">Address Comments</string>
        <string name="address_more_info">Address more info</string>
        <string name="send_order">Send Order</string>
        <string name="save_only">Save Only</string>
        <string name="review_your_lists_before_send">Review your lists before send</string>

</resources>