<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:weightSum="100" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/list_name" />

        <EditText
            android:id="@+id/listnamehousehold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="@string/list_name"
            android:imeOptions="actionDone"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:weightSum="100" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/scheduled_at_" />

        <EditText
            android:id="@+id/schedulefieldhousehold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="@string/schedulehint"
            android:imeOptions="actionDone"
            android:textColor="#000000" />
    </LinearLayout>

    

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/describe_an_activity_to_do" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:weightSum="100" >

        <AutoCompleteTextView
            android:id="@+id/householddescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="90"
            android:ems="10"
            android:hint="@string/activity_example"
            android:imeOptions="actionNext"
            android:inputType="textAutoComplete"
            android:textColor="#000000" />

        <Button
            android:id="@+id/addhouseholdbut"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="10"
            android:layout_marginLeft="5dp"
              android:layout_marginRight="5dp"
            android:background="@drawable/add_but"
            android:textSize="20sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/householdlv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:padding="1dp"
        android:weightSum="100" >

        <Button
            android:id="@+id/donehouseholdbut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="50"
            android:text="@string/done_and_continue" />

        <Button
            android:id="@+id/cancelhouseholdbut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="42.76"
            android:text="@string/cancel" />
    </LinearLayout>
    
</LinearLayout>
