<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_1"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/describe_item" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:weightSum="100" >

        <AutoCompleteTextView
            android:id="@+id/grocerydescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="85"
            android:ems="10"
            android:hint="@string/grocery_name"
            android:imeActionLabel="@string/add_item"
            android:imeOptions="actionDone"
            android:inputType="textAutoComplete"
            android:textColor="#000000" />

        <Button
            android:id="@+id/addgrocerybut"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="1dp"
            android:layout_weight="15"
            android:background="@drawable/add_but" />
    </LinearLayout>

    <ListView
        android:id="@+id/grocerylv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:padding="1dp"
        android:weightSum="100" >

        <Button
            android:id="@+id/donegrocerybut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="50"
            android:drawableLeft="@drawable/ic_action_send_now"
            android:text="@string/sendnow"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/cancelgrocerybut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="50"
            android:drawableLeft="@drawable/ic_action_cancel"
            android:text="@string/cancel"
            android:textColor="@android:color/background_light" />
    </LinearLayout>

</LinearLayout>