<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@android:style/Theme.Translucent"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/back_1">


        <EditText
            android:id="@+id/emialEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/you_domaim_com"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/usernameEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/passwordEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/passlength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="0dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/repitpasswordEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/repeat_above_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
   


        <Button
            android:id="@+id/signupBut"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/signup1" />

        <Button
            android:id="@+id/loginBut"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login1"/>
  
</LinearLayout>